--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-ts",
-  "description": "A TypeScript starter for Gatsby that includes all you need to build amazing projects",
+  "name": "renegade-web",
+  "description": "Gatsby website for The Renegade Academy",
   "version": "1.0.0",
   "private": true,
-  "author": "João Pedro Schmitz <hey@joaopedro.dev> (https://joaopedro.dev)",
+  "author": "Bryan Hickey <bryanjhickey@gmail.com> (https://bryanjhickey.com.au)",
   "license": "MIT",
   "keywords": [
     "gatsby",
@@ -11,7 +11,7 @@
     "typescript"
   ],
   "scripts": {
-    "start": "gatsby develop",
+    "start": "export NODE_OPTIONS=--openssl-legacy-provider && gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
@@ -29,9 +29,18 @@
     ]
   },
   "dependencies": {
+    "@react-icons/all-files": "4.1.0",
+    "@tailwindcss/aspect-ratio": "0.4.0",
+    "@tailwindcss/forms": "0.4.0",
+    "@tailwindcss/line-clamp": "0.3.1",
     "gatsby": "4.6.0",
+    "gatsby-plugin-image": "2.6.0",
+    "gatsby-plugin-sharp": "4.6.0",
+    "gatsby-source-filesystem": "4.6.0",
+    "gatsby-transformer-sharp": "4.6.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "4.3.1",
     "tsconfig-paths-webpack-plugin": "3.5.2"
   },
   "devDependencies": {
@@ -39,6 +48,7 @@
     "@babel/preset-typescript": "7.16.7",
     "@commitlint/cli": "16.1.0",
     "@commitlint/config-conventional": "16.0.0",
+    "@tailwindcss/typography": "0.5.1",
     "@testing-library/dom": "8.11.3",
     "@testing-library/jest-dom": "5.16.1",
     "@testing-library/react": "12.1.2",
@@ -49,6 +59,7 @@
     "@types/react-dom": "17.0.11",
     "@typescript-eslint/eslint-plugin": "5.10.1",
     "@typescript-eslint/parser": "5.10.1",
+    "autoprefixer": "10.4.2",
     "babel-jest": "27.4.6",
     "babel-preset-gatsby": "2.6.0",
     "commitizen": "4.2.4",
@@ -63,11 +74,14 @@
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-react": "7.28.0",
     "eslint-plugin-react-hooks": "4.3.0",
+    "gatsby-plugin-postcss": "5.6.0",
     "husky": "7.0.4",
     "identity-obj-proxy": "3.0.0",
     "jest": "27.4.7",
     "lint-staged": "12.3.2",
+    "postcss": "8.4.6",
     "prettier": "2.5.1",
+    "tailwindcss": "3.0.18",
     "ts-jest": "27.1.3",
     "typescript": "4.5.5"
   },
