--- a/package.json
+++ b/package.json
@@ -33,10 +33,13 @@
     "@tailwindcss/aspect-ratio": "0.4.0",
     "@tailwindcss/forms": "0.4.0",
     "@tailwindcss/line-clamp": "0.3.1",
+    "dotenv": "15.0.0",
     "gatsby": "4.6.0",
+    "gatsby-plugin-config": "1.0.7",
     "gatsby-plugin-image": "2.6.0",
     "gatsby-plugin-sharp": "4.6.0",
     "gatsby-source-filesystem": "4.6.0",
+    "gatsby-source-sanity": "7.3.2",
     "gatsby-transformer-sharp": "4.6.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
