--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@tailwindcss/forms": "0.4.0",
     "@tailwindcss/line-clamp": "0.3.1",
     "dotenv": "15.0.0",
+    "framer-motion": "6.2.3",
     "gatsby": "4.6.0",
     "gatsby-plugin-config": "1.0.7",
     "gatsby-plugin-image": "2.6.0",
@@ -44,6 +45,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "4.3.1",
+    "react-intersection-observer": "8.33.1",
     "tsconfig-paths-webpack-plugin": "3.5.2"
   },
   "devDependencies": {
@@ -84,6 +86,7 @@
     "lint-staged": "12.3.2",
     "postcss": "8.4.6",
     "prettier": "2.5.1",
+    "prettier-plugin-tailwindcss": "0.1.4",
     "tailwindcss": "3.0.18",
     "ts-jest": "27.1.3",
     "typescript": "4.5.5"
