--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@babel/preset-typescript": "7.16.7",
     "@commitlint/cli": "16.1.0",
     "@commitlint/config-conventional": "16.0.0",
+    "@netlify/plugin-lighthouse": "2.1.3",
     "@tailwindcss/typography": "0.5.1",
     "@testing-library/dom": "8.11.3",
     "@testing-library/jest-dom": "5.16.1",
