--- a/package.json
+++ b/package.json
@@ -30,20 +30,24 @@
   },
   "dependencies": {
     "@react-icons/all-files": "4.1.0",
+    "@sanity/image-url": "1.0.1",
     "@tailwindcss/aspect-ratio": "0.4.0",
     "@tailwindcss/forms": "0.4.0",
     "@tailwindcss/line-clamp": "0.3.1",
+    "date-fns": "2.28.0",
     "dotenv": "15.0.0",
     "framer-motion": "6.2.3",
     "gatsby": "4.6.0",
     "gatsby-plugin-config": "1.0.7",
     "gatsby-plugin-image": "2.6.0",
+    "gatsby-plugin-react-helmet": "5.6.0",
     "gatsby-plugin-sharp": "4.6.0",
     "gatsby-source-filesystem": "4.6.0",
     "gatsby-source-sanity": "7.3.2",
     "gatsby-transformer-sharp": "4.6.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-helmet": "6.1.0",
     "react-icons": "4.3.1",
     "react-intersection-observer": "8.33.1",
     "tsconfig-paths-webpack-plugin": "3.5.2"
