--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "format": "prettier --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\" --write",
     "postinstall": "husky install",
     "test": "jest",
-    "commit": "cz"
+    "commit": "cz",
+    "preload-fonts": "gatsby-preload-fonts"
   },
   "lint-staged": {
     "./src/**/*.{ts,js,jsx,tsx}": [
@@ -40,6 +41,7 @@
     "gatsby": "4.6.0",
     "gatsby-plugin-config": "1.0.7",
     "gatsby-plugin-image": "2.6.0",
+    "gatsby-plugin-preload-fonts": "3.6.0",
     "gatsby-plugin-react-helmet": "5.6.0",
     "gatsby-plugin-sharp": "4.6.0",
     "gatsby-source-filesystem": "4.6.0",
