--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gatsby-plugin-image": "2.6.0",
     "gatsby-plugin-preload-fonts": "3.6.0",
     "gatsby-plugin-react-helmet": "5.6.0",
+    "gatsby-plugin-remove-console": "0.0.2",
     "gatsby-plugin-sharp": "4.6.0",
     "gatsby-source-filesystem": "4.6.0",
     "gatsby-source-sanity": "7.3.2",
@@ -73,6 +74,7 @@
     "@typescript-eslint/parser": "5.10.1",
     "autoprefixer": "10.4.2",
     "babel-jest": "27.4.6",
+    "babel-plugin-transform-remove-console": "6.9.4",
     "babel-preset-gatsby": "2.6.0",
     "commitizen": "4.2.4",
     "cz-conventional-changelog": "3.3.0",
