--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "@tailwindcss/aspect-ratio": "0.4.0",
     "@tailwindcss/forms": "0.4.0",
     "@tailwindcss/line-clamp": "0.3.1",
+    "axios": "0.25.0",
     "date-fns": "2.28.0",
     "dotenv": "15.0.0",
     "framer-motion": "6.2.3",
     "gatsby": "4.6.0",
+    "gatsby-node-helpers": "1.2.1",
     "gatsby-plugin-config": "1.0.7",
     "gatsby-plugin-image": "2.6.0",
     "gatsby-plugin-preload-fonts": "3.6.0",
@@ -46,6 +48,7 @@
     "gatsby-plugin-remove-console": "0.0.2",
     "gatsby-plugin-sharp": "4.6.0",
     "gatsby-source-filesystem": "4.6.0",
+    "gatsby-source-google-places": "1.0.1",
     "gatsby-source-sanity": "7.3.2",
     "gatsby-transformer-sharp": "4.6.0",
     "react": "17.0.2",
