--- a/netlify.toml
+++ b/netlify.toml
@@ -13,11 +13,11 @@
 [[headers]]
   for = "/*"
   [headers.values]
-    Strict-Transport-Security = "max-age=63072000; includeSubDomains; preload"
-    Content-Security-Policy = "default-src 'none'; img-src 'self'; script-src 'self'; style-src 'self'"
-    X-Frame-Options = "DENY"
-    X-Content-Type-Options = "nosniff"
-    Referrer-Policy = "no-referrer"
-    Feature-Policy = "microphone 'none'; geolocation 'none'"
-    X-XSS-Protection = "1; mode=block"
+    # Strict-Transport-Security = "max-age=63072000; includeSubDomains; preload"
+    # Content-Security-Policy = "default-src 'none'; img-src 'self'; script-src 'self'; style-src 'self'"
+    # X-Frame-Options = "DENY"
+    # X-Content-Type-Options = "nosniff"
+    # Referrer-Policy = "no-referrer"
+    # Feature-Policy = "microphone 'none'; geolocation 'none'"
+    # X-XSS-Protection = "1; mode=block"
 
