--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@types/node": "16.11.21",
     "@types/react": "17.0.38",
     "@types/react-dom": "17.0.11",
+    "@types/react-helmet": "6.1.5",
     "@typescript-eslint/eslint-plugin": "5.10.1",
     "@typescript-eslint/parser": "5.10.1",
     "autoprefixer": "10.4.2",
