chore: fix accesibility issues

--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   ],
   "scripts": {
     "start": "export NODE_OPTIONS=--openssl-legacy-provider && gatsby develop",
-    "build": "gatsby build",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider && gatsby build",
+    "serve": "export NODE_OPTIONS=--openssl-legacy-provider && gatsby serve",
+    "clean": "export NODE_OPTIONS=--openssl-legacy-provider && gatsby clean",
     "type-check": "tsc",
     "lint": "eslint --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\"",
     "format": "prettier --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\" --write",
