fix: resolves issues with seo and incorr ect sanity schema. added new image for covid section

--- a/.eslintrc
+++ b/.eslintrc
@@ -22,7 +22,8 @@
     "airbnb",
     "prettier",
     "plugin:jest/recommended",
-    "plugin:jest/style"
+    "plugin:jest/style",
+    "plugin:jsx-a11y/recommended"
   ],
   "rules": {
     "jest/prefer-strict-equal": "error",
