--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "gatsby-plugin-config": "1.0.7",
     "gatsby-plugin-image": "2.6.0",
     "gatsby-plugin-manifest": "4.6.0",
+    "gatsby-plugin-netlify": "4.1.0",
     "gatsby-plugin-preload-fonts": "3.6.0",
     "gatsby-plugin-react-helmet": "5.6.0",
     "gatsby-plugin-remove-console": "0.0.2",
