--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gatsby": "4.6.0",
     "gatsby-node-helpers": "1.2.1",
     "gatsby-plugin-config": "1.0.7",
+    "gatsby-plugin-google-gtag": "4.7.0",
     "gatsby-plugin-image": "2.6.0",
     "gatsby-plugin-manifest": "4.6.0",
     "gatsby-plugin-netlify": "4.1.0",
