fix: layout in about section

--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "typescript"
   ],
   "scripts": {
-    "start": "export NODE_OPTIONS=--openssl-legacy-provider && gatsby develop",
-    "build": "export NODE_OPTIONS=--openssl-legacy-provider && gatsby build",
-    "serve": "export NODE_OPTIONS=--openssl-legacy-provider && gatsby serve",
-    "clean": "export NODE_OPTIONS=--openssl-legacy-provider && gatsby clean",
+    "start": "gatsby develop",
+    "build": "gatsby build",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
     "type-check": "tsc",
     "lint": "eslint --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\"",
     "format": "prettier --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\" --write",
@@ -69,7 +69,6 @@
     "@commitlint/cli": "16.1.0",
     "@commitlint/config-conventional": "16.0.0",
     "@netlify/plugin-lighthouse": "2.1.3",
-
     "@testing-library/dom": "8.11.3",
     "@testing-library/jest-dom": "5.16.1",
     "@testing-library/react": "12.1.2",
